; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_multi_copy.c_RemoteCreateEmptyShard.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_multi_copy.c_RemoteCreateEmptyShard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@CREATE_EMPTY_SHARD_QUERY = common dso_local global i32 0, align 4
@masterConnection = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@PGRES_TUPLES_OK = common dso_local global i64 0, align 8
@WARNING = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [54 x i8] c"could not create a new empty shard on the remote node\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @RemoteCreateEmptyShard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @RemoteCreateEmptyShard(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_4__*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  store i32 0, i32* %3, align 4
  store i32* null, i32** %4, align 8
  store i32 1, i32* %5, align 4
  %9 = call %struct.TYPE_4__* (...) @makeStringInfo()
  store %struct.TYPE_4__* %9, %struct.TYPE_4__** %6, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %11 = load i32, i32* @CREATE_EMPTY_SHARD_QUERY, align 4
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @appendStringInfo(%struct.TYPE_4__* %10, i32 %11, i8* %12)
  %14 = load i32, i32* @masterConnection, align 4
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %6, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @SendRemoteCommand(i32 %14, i32 %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %24, label %20

20:                                               ; preds = %1
  %21 = load i32, i32* @masterConnection, align 4
  %22 = load i32, i32* @ERROR, align 4
  %23 = call i32 @ReportConnectionError(i32 %21, i32 %22)
  br label %24

24:                                               ; preds = %20, %1
  %25 = load i32, i32* @masterConnection, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32* @GetRemoteCommandResult(i32 %25, i32 %26)
  store i32* %27, i32** %4, align 8
  %28 = load i32*, i32** %4, align 8
  %29 = call i64 @PQresultStatus(i32* %28)
  %30 = load i64, i64* @PGRES_TUPLES_OK, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %37

32:                                               ; preds = %24
  %33 = load i32*, i32** %4, align 8
  %34 = call i8* @PQgetvalue(i32* %33, i32 0, i32 0)
  store i8* %34, i8** %7, align 8
  store i8* null, i8** %8, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = call i32 @strtoul(i8* %35, i8** %8, i32 0)
  store i32 %36, i32* %3, align 4
  br label %45

37:                                               ; preds = %24
  %38 = load i32, i32* @masterConnection, align 4
  %39 = load i32*, i32** %4, align 8
  %40 = load i32, i32* @WARNING, align 4
  %41 = call i32 @ReportResultError(i32 %38, i32* %39, i32 %40)
  %42 = load i32, i32* @ERROR, align 4
  %43 = call i32 @errmsg(i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0))
  %44 = call i32 @ereport(i32 %42, i32 %43)
  br label %45

45:                                               ; preds = %37, %32
  %46 = load i32*, i32** %4, align 8
  %47 = call i32 @PQclear(i32* %46)
  %48 = load i32, i32* @masterConnection, align 4
  %49 = load i32, i32* %5, align 4
  %50 = call i32* @GetRemoteCommandResult(i32 %48, i32 %49)
  store i32* %50, i32** %4, align 8
  %51 = load i32*, i32** %4, align 8
  %52 = icmp ne i32* %51, null
  %53 = xor i1 %52, true
  %54 = zext i1 %53 to i32
  %55 = call i32 @Assert(i32 %54)
  %56 = load i32, i32* %3, align 4
  ret i32 %56
}

declare dso_local %struct.TYPE_4__* @makeStringInfo(...) #1

declare dso_local i32 @appendStringInfo(%struct.TYPE_4__*, i32, i8*) #1

declare dso_local i32 @SendRemoteCommand(i32, i32) #1

declare dso_local i32 @ReportConnectionError(i32, i32) #1

declare dso_local i32* @GetRemoteCommandResult(i32, i32) #1

declare dso_local i64 @PQresultStatus(i32*) #1

declare dso_local i8* @PQgetvalue(i32*, i32, i32) #1

declare dso_local i32 @strtoul(i8*, i8**, i32) #1

declare dso_local i32 @ReportResultError(i32, i32*, i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @PQclear(i32*) #1

declare dso_local i32 @Assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
